namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-official-visits-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-official-visits-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "managing-contacts"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Official visits booking: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-official-visits-prototype"
    cloud-platform.justice.gov.uk/team-name: "official-visits-design"
    cloud-platform.justice.gov.uk/review-after: ""
